# libverlim

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  amix.cpp  build.ps1  build.sh  run.ps1  run.sh  verlim.cpp
addons/consoleui/: dialoguebox.cpp  dialoguebox.h  optionbox.cpp  optionbox.h  prompt.cpp  prompt.h  tablelist.cpp  tablelist.h  textbox.cpp  textbox.h  titleheader.cpp  titleheader.h  uipos.h
addons/display/: bar.cpp  bar.h  memstat.cpp  memstat.h  seperator.cpp  seperator.h
addons/libcommand/: command.cpp  command.h  commandutils.cpp  commandutils.h
addons/liboptions/: option.cpp  option.h  optionmenu.cpp  optionmenu.h  optionutils.cpp  optionutils.h
addons/libshell/: shell.cpp  shell.h  shellenv.h
common/: info.h  version.h
docs/: TODO.md
docs/verlim/: Building.md
fs/: file.cpp  file.h  fileutils.cpp  fileutils.h  paths.cpp  paths.h
http/: browser.cpp  browser.h  link.cpp  link.h
include/: color.hpp  keyinput.hpp  verlim.h
include/libverlim/: error.h  vtime.h  warn.h
lib/: chtools.cpp  chtools.h  convert.h  cstrutils.h  mem.h  rtime.cpp  rtime.h  stringutils.cpp  stringutils.h  thread.cpp  thread.h  timelib.h  vectorutils.h  winmem.h
lib/fs/: file.h
lib/sys/: amixcalls.cpp  amixcalls.h  limbuiltin.cpp  limbuiltin.h  limsys.cpp  limsys.h  sysamix.cpp  sysamix.h
limstd/limio/: limioutils.h  limstdio.h
logging/: consolemsg.cpp  consolemsg.h  logger.cpp  logger.h
math/: basicarithmetic.h
math/libyield/: percentage.h  yield.h
parser/: bincmds.h  ccmds.h  parser.cpp  parser.h
res/: libversion.txt
source/: includes.h  loader.h  verlim.h
